# War3BatchModelPreviewerQt

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
.github/workflows/: windows.yml
src/: BlpLoader.cpp  BlpLoader.h  GLModelView.cpp  GLModelView.h  LogSink.cpp  LogSink.h  MainWindow.cpp  MainWindow.h  MdxLoader.cpp  MdxLoader.h  ModelData.h  Vfs.cpp  Vfs.h  main.cpp
